--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
         <script src="//code.angularjs.org/1.3.0-rc.1/angular-route.min.js"></script>
         <script src="app.js"></script>
+        <script src="/controllers/mainController.js"></script>
+        <script src="/controllers/secondController.js"></script>
 
     </head>
     <body>
