--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,12 +1,23 @@
 <h4> {{message}} </h4>
 
+<div class="btn-group" style="margin-bottom:15px;">
+    <button class="btn btn-success" ng-click="filterOnlyIncomplete()" ng-hide="todoFilter">Show only non completed</button>
+  	<!--<button class="btn btn-success" ng-click="changeFilter()" ng-show="todoFilter">Show ALL</button>!-->
+
+</div>
+
 <div class="list-group" ng-repeat="todo in todos">
 
-<a href="#/todo/{{todo.id}}" class="list-group-item">
+<div class="list-group-item">
     <h4 class="list-group-item-heading"><b>TODO: {{todo.description}}</h4>
     <p class="list-group-item-text" ng-class="{'alert-info' : todo.completed, 'alert-danger' : !todo.completed}">Completed ? <br/> {{todo.completed}}</p>
-</a>
+    <a class="btn btn-success" style="margin-top:10px;" value="More details" href="#/todo/{{todo.id}}">More Details</a>
+    <br/>
+    <input type="button" class="btn-primary" style="margin-top:10px;" value="Mark as completed" ng-hide="todo.completed" ng-click="markAsCompleted(todo.id)"/>
+    <br/>
+    <input type='button' class='btn-danger' style="margin-top:10px;color:blue;" value = "Delete Todo"/>
 
 
 
 </div>
+
