--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
         <!-- load angular via CDN -->
         <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
         <script src="//code.angularjs.org/1.3.0-rc.1/angular-route.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="app.js"></script>
         <script src="/controllers/mainController.js"></script>
         <script src="/controllers/secondController.js"></script>
-
+        <script src="/controllers/createTodoController.js"></script>
     </head>
     <body>
 
