Adding Delete functionality with confirmation click (custom directive), adding timeout after inserting new ToDo

--- a/public/pages/createTodo.html
+++ b/public/pages/createTodo.html
@@ -6,3 +6,9 @@
         <h4> Character Count: <b>{{description.length}}</b> </h4>
         <button class="btn btn-primary" ng-disabled="!description" ng-click="sendNewTodo()">Send</button>
 </form>
+
+
+<div class="alert alert-info" ng-show="confirmMessage">
+	
+    <strong>{{confirmMessage}}</strong>
+</div>
