fix minor details onpublic routes

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,4 +1,4 @@
-<div class="alert alert-info" ng-show="todocount>0">
+<div class="alert alert-info" ng-show="counter>=1">
 	<a class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Attention:</strong>You got {{counter}} non completed activities
 </div>
